--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
             </div>
             <div class="grid_item">
               <div class="card">
-                <img src="project8.png" alt="Project 8" />
+                <img src="project8.png" alt="Project 8" 
+                />
                 <div class="card_content">
                   <a href="../8,documentation website/index.html">
-                    <h3>Documentation Website</h3>
+                    <h3>Documentation Website!</h3>
                   </a>
                 </div>
               </div>
